<resources>

    <!--    App Strings-->
    <string name="app_name">Brew Finder</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibW9oaXQxMDEwIiwiYSI6ImNrMXFwbGgwNDE2bGszbWw4bTRkNXVocjgifQ.VOTX4kupiLOfsxQLcTKnIg</string>

    <!-- Login Screen -->
    <string name="email">Email Address:</string>
    <string name="Pass">Password: </string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="signIn">Sign In</string>
    <string name="enter_email">you@example.com</string>
    <string name="enter_pwd">********</string>
    <string name="enter_phone">(555)-555-55555</string>
    <string name="txt_sign_Up"><u><b>Sign Up</b></u></string>
    <string name="txt_signIn"><u><b>Sign In</b></u></string>

    <string name="signUpAcc">Already have an account?</string>

    <!-- Register Screen-->
    <string name="profile_user_name">Jim Johnson</string>
    <string name="ph_no">Phone Number</string>
    <string name="UserAgreemnet"><b><u>User Agreement</u></b></string>
    <string name="agreement">By signing up you agree to our User Agreement</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? </string>

    <!--Businuss Scrren-->
    <string name="next">Next</string>
    <string name="option">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="bussiness_setup">Business Setup</string>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="token_placeapi">AIzaSyA84_5AkZjdlNM7DcvkRsk3Mq-h6Mt149E</string>

    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="confirmation_msg">Please enter your email address and we will send you a new password</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="otp">OTP</string>
    <string name="didnot_received">Did not received OTP?</string>
    <string name="resend">Resend</string>
    <string name="_4526">4526</string>
    <string name="hint_new">*********</string>
    <string name="hint_confirm">*********</string>
    <string name="business_name">Business Name:</string>
    <string name="business">Business</string>
    <string name="emailaddress_gmail_com">EmailAddress@gmail.com</string>
    <string name="_555_555_55555">(555)-555-55555</string>
    <string name="name">Your name</string>
    <string name="action_okay">OK</string>
    <string name="hours_of_operation">Hours of Operation:</string>
    <string name="signup">Signup</string>
    <string name="confirmation_msg1">Please enter your email address and we will send you a new password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text_reset">EmailAddress@gmail.com</string>
    <string name="logo_jpg">Logo.jpg</string>
    <string name="new_deals">NEW DEAL</string>


    <!--home_toolbar-->
    <string name="txt_home">HOME</string>
    <string name="brewery_name">Brewery Name</string>
    <string name="follow">Follow</string>
    <string name="no_internet_toast">Please check your internet connection!</string>
    <string name="deals_details">Deals Details</string>
    <string name="from_current_location">From Current Location</string>
    <string name="change_location">Change Location</string>
    <string name="radius">Radius :</string>
    <string name="discount">Discount Offered on Deals:</string>
    <string name="deal_start_time">Deal Start Time</string>
    <string name="descrpition">Description:</string>
    <string name="app_Name">Spinner</string>
    <string name="selected_item">Selected item:</string>
    <string name="tracking_already_enabled">tracking_already_enabled</string>
    <string name="deal_details">Deal Details</string>
    <string name="heading_deal_details">Deal Details</string>
    <string name="text_dialog">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="edit_this_deal">Edit this Deal</string>
    <string name="delete_deal">Delete this Deal</string>
    <string name="date_added">Date Added</string>
    <string name="action_settings">Settings</string>

    <string name="txt_profile">PROFILE</string>
    <string name="blocked_users">Blocked \n Users</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="profile_user_address">4736 Southside Lane</string>
    <string name="count_following">678</string>
    <string name="count_followers">1,051</string>
    <string name="count_blocked">7</string>
    <string name="user_profile_text_box">What is on your mind?</string>
    <string name="business_profile">BUSINESS PROFILE</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="stats">Stats</string>
    <string name="location">Location</string>
    <string name="inbox">Inbox</string>
=======
    <string name="redeem_code">Redeem Code</string>
    <string name="check_menu">Check Menu</string>
    <string name="save">Save</string>
    <string name="business_email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="hours_of_operation_profile">Hours of Operation</string>
    <string name="about_brewery">About Brewery:</string>
    <string name="brewery_address">Brewery address</string>
    <string name="user_name">User Name</string>
    <string name="favourite_deal">Favourite Deal</string>
    <string name="deal_title">Deal Title</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="type_your_comment_here">Type your comment here</string>
    >>>>>>> origin/master


</resources>