<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/welcome"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-40dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="50dp"
                android:paddingEnd="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="16sp"
                    android:textColor="@color/txt_light" />

                <EditText
                    android:id="@+id/et_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/txt_dark" />


                <TextView
                    android:id="@+id/ti_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/email"
                    android:textColor="@color/txt_light" />

                <EditText
                    android:id="@+id/et_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:hint="@string/emailaddress_gmail_com"
                    android:textColor="@color/txt_dark" />

                <TextView
                    android:id="@+id/ti_phone_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ph_no"
                    android:textSize="16sp"
                    android:textColor="@color/txt_light" />

                <EditText
                    android:id="@+id/et_phone_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:hint="@string/enter_phone"
                    android:textColor="@color/txt_dark" />


                <TextView
                    android:id="@+id/ti_pass_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Pass"
                    android:textSize="16sp"
                    android:textColor="@color/txt_light" />

                <EditText
                    android:id="@+id/et_pass_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/enter_pwd"
                    android:singleLine="true"
                    android:textColor="@color/txt_dark" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:textSize="12sp"
                        android:text="@string/agreement"
                        android:textColor="@color/dark_grey" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:backgroundTint="@color/btn_gray"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/already_have_an_account"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_signIn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_signIn"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</ScrollView>