<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/welcome" />

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">


            <TextView
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/confirmation_msg"
                    android:textColor="@color/txt_light"
                    android:textSize="18sp" />

            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textColor="@color/txt_light" />

            <EditText
                    android:id="@+id/etSubmitEmail"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_reset"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/dark_grey" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/btn_gray"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="8dp" />


        </LinearLayout>

    </LinearLayout>



</ScrollView>


